# lastfm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_bot.py
scripts/: combine_usernames.py  fetch_session.py
src/: __init__.py  bot.py  database.py  formatter.py  main.py
